[gd_scene load_steps=4 format=3 uid="uid://bbeluq1okbp6c"]

[ext_resource type="Script" uid="uid://c7hbb0srandyb" path="res://scripts/settings.gd" id="1_7kwmf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4u22a"]
bg_color = Color(0.364706, 0.364706, 0.364706, 0.152941)
border_width_top = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7kwmf"]
bg_color = Color(1, 1, 1, 0.152941)
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[node name="settings" type="CanvasLayer"]
layer = 2
script = ExtResource("1_7kwmf")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 0.701961)

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 6.0
offset_top = 11.0
offset_right = 1151.0
offset_bottom = 149.0
theme_override_font_sizes/normal_font_size = 80
bbcode_enabled = true
text = "[center]Settings"

[node name="window_mode_text" type="RichTextLabel" parent="."]
offset_left = 456.0
offset_top = 177.0
offset_right = 710.0
offset_bottom = 225.0
theme_override_font_sizes/normal_font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_4u22a")
bbcode_enabled = true
text = "[center]Window Mode"

[node name="window_mode_options" type="OptionButton" parent="."]
offset_left = 462.0
offset_top = 231.0
offset_right = 699.0
offset_bottom = 281.0
theme_override_font_sizes/font_size = 20
selected = 1
item_count = 2
popup/item_0/text = "Windowed"
popup/item_0/id = 0
popup/item_1/text = "Exclusive Fullscreen"
popup/item_1/id = 1

[node name="Music" type="RichTextLabel" parent="."]
offset_left = 536.0
offset_top = 325.0
offset_right = 630.0
offset_bottom = 368.0
theme_override_font_sizes/normal_font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_7kwmf")
bbcode_enabled = true
text = "[center]Music"

[node name="music_button" type="CheckButton" parent="."]
offset_left = 542.0
offset_top = 369.0
offset_right = 613.0
offset_bottom = 419.0
theme_override_font_sizes/font_size = 25
button_pressed = true
text = "On"

[node name="SFX" type="RichTextLabel" parent="."]
offset_left = 536.0
offset_top = 438.0
offset_right = 630.0
offset_bottom = 481.0
theme_override_font_sizes/normal_font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_7kwmf")
bbcode_enabled = true
text = "[center]SFX"

[node name="sfx_button" type="CheckButton" parent="."]
offset_left = 542.0
offset_top = 482.0
offset_right = 626.0
offset_bottom = 532.0
theme_override_font_sizes/font_size = 25
button_pressed = true
text = "On"

[node name="close_button" type="Button" parent="."]
offset_left = 1092.0
offset_top = 6.0
offset_right = 1147.0
offset_bottom = 59.0
theme_override_font_sizes/font_size = 30
text = "X"

[connection signal="item_selected" from="window_mode_options" to="." method="set_window_mode"]
[connection signal="toggled" from="music_button" to="." method="_on_music_check_toggled"]
[connection signal="toggled" from="sfx_button" to="." method="_on_sfx_check_toggled"]
